--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ body{
 
 /* Header */
 #img1{
-    float: left;
-    width: 100px;
+    float:  right;
+    width: 150px;
     margin: 10px 10px 10px 10px;
 }
 header{
@@ -20,6 +20,8 @@ header{
     color: red;
     text-align: center;
     text-decoration: underline blue;
+    padding-bottom: 20px;
+    font-size: 35px;
 
 }
 #heading:hover{
@@ -28,14 +30,37 @@ header{
 #heading span{
     color: darkgreen;
 }
-#head2{
-    color: blueviolet;
-    text-decoration:double green;
+/* Menu */
+#menu{
+
+}
+#youtube1{
     text-align: center;
+    text-decoration: dashed;
+    color: white;
+    padding: 10px;
+    margin-left: 200px;
+    font-size: 20px;
+    border: 10px solid blue;
+    border-radius: 30px;
 }
-#head2 span{
-    color: grey;
+#youtube1:hover{
+    color: red;
 }
+.youtube{
+    text-align: center;
+    text-decoration: dashed;
+    color: white;
+    padding: 10px;
+    margin-left:100px;
+    font-size: 20px;
+    border: 10px solid blue;
+    border-radius: 30px;
+}
+.youtube:hover{
+    color: red;
+}
+/* End Menu */
 /* End Header */
 /* Footer */
 footer{
