--- a/style.css
+++ b/style.css
@@ -63,9 +63,14 @@ header{
 /* End Menu */
 /* End Header */
 /* Footer */
+main{
+    min-height: 100vh;
+    margin-bottom: -100px;
+}
 footer{
-    margin-top: auto;
-
+    width: 100%;
+    background: gray;
+    height: 100px;
 }
 
 /* End Footer */
