--- a/style.css
+++ b/style.css
@@ -1,73 +1,17 @@
-html{
-    height: 100%;
-}
-body{
-    background: url(/tech-gameryt/bg.jpg) rgba(0,0,0,0.3);
-    background-blend-mode: multiply;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    min-height: 100%;
-    display: flex;
-    flex-direction: column;
-}
-footer {
-	background: #101010;
-	padding: 86px 0;
-    margin-top: auto;
-}
-.single-content {
-	text-align: center;
-	padding: 115px 0;
-}
-.single-box p {
-	color: #fff;
-	line-height: 1.9;
-}
-.single-box h3 {
-	font-size: 16px;
-	font-weight: 700;
-	color: #fff;
-}
-.single-box .card-area i {
-	color: #ffffff;
-	font-size: 20px;
-	margin-right: 10px;
-}
-.single-box ul {
-	list-style: none;
-	padding: 0;
-}
-.single-box ul li a {
-	text-decoration: none;
-	color: #fff;
-	line-height: 2.5;
-	font-weight: 100;
-}
-.single-box h2 {
-	color: #fff;
-	font-size: 20px;
-	font-weight: 700;
-}
-#basic-addon2 {
-	background: #fe1e4f;
-	color: #fff;
-}
-.socials i {
-	font-size: 18px;
-	margin-right: 15px;
-}
-@media (max-width: 767px) {
-	.single-box {
-		margin-bottom: 50px;
-	}
-}
-@media (min-width: 768px) and (max-width: 991px) {
-	.single-box {
-		margin-bottom: 50px;
-	}
-}
-.tech{
-	color: white;
+body::before {
+  display: block;
+  content: '';
+  height: 60px;
 }
 
+#map {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+
+@media (min-width: 768px) {
+  .news-input {
+    width: 50%;
+  }
+}
